--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header center">
         <div class="header_left">
-            <a class="logo" href=""><img class="logo_img" src="img/logo.png" alt="logo">BRAN<span class="red_d">D</span></a>
+            <a class="logo" href="index.html"><img class="logo_img" src="img/logo.png" alt="logo">BRAN<span class="red_d">D</span></a>
             <form class="header_form" action="#">
                 <details class="browse_btn">
                     <summary class="browse">Browse</summary>
@@ -40,7 +40,7 @@
     </header>
     <nav class="nav_menu center">
         <ul class="menu">
-            <li class="menu_list"><a href="#" class="menu_link">Home</a>
+            <li class="menu_list"><a href="index.html" class="menu_link">Home</a>
                 <div class="drop">
                     <div class="drop_flex">
                         <h3 class="drop_h3">Women</h3>
@@ -266,9 +266,8 @@
                             <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
                             <li><a href="#" class="drop_link">Jackets/Coats</a></li>
                         </ul>
-                        <img class="img_super_sale" scr="img/Layer_42.jpg" alt="super sale">
+                        <img class="img_super_sale" src="img/Layer_42.jpg" alt="super sale">
                         <h1 class="h1_drop">super<br>sale!</h1>
-
                     </div>
                 </div>
             </li>
@@ -313,7 +312,7 @@
                             <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
                             <li><a href="#" class="drop_link">Jackets/Coats</a></li>
                         </ul>
-                        <img class="img_super_sale" scr="img/Layer_42.jpg" alt="super sale">
+                        <img class="img_super_sale" src="img/Layer_42.jpg" alt="super sale">
                         <h1 class="h1_drop">super<br>sale!</h1>
                     </div>
                 </div>
@@ -359,7 +358,7 @@
                             <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
                             <li><a href="#" class="drop_link">Jackets/Coats</a></li>
                         </ul>
-                        <img class="img_super_sale" scr="img/Layer_42.jpg" alt="super sale">
+                        <img class="img_super_sale" src="img/Layer_42.jpg" alt="super sale">
                         <h1 class="h1_drop">super<br>sale!</h1>
                     </div>
                 </div>
@@ -400,11 +399,11 @@
             </div>
         </div>
     </div>
-    <div class="fetured_items_text center">
+    <<div class="fetured_items_text center">
         <div class="Fetured_Items center">Fetured Items</div>
         <div class="subtext center">Shop for items based on what we featured in this week</div>
-    </div>
-    <div class="second_items center">
+    <</div>
+    <<div class="second_items center">
         <div class="block">
             <a href="#"><img class="block_img" src="img/Layer_2.png" alt="t-shirt"></a>
             <div class="block_content">
@@ -461,7 +460,7 @@
     </div>
     <div class="all_products center"><a href="#" class="button2">Browse All Product &#8594;</a>
     </div>
-    <div class="banner center">
+    <section class="banner center">
         <div class="banner_offer">
             <div class="banner_text">
                 <h1 class="h1_offer">30% <span class="offer_span">offer</span></h1>
@@ -491,8 +490,8 @@
                 </table>
             </div>
         </div>
-    </div>
-    <div class="subscribe center">
+    </section>
+    <section class="subscribe center">
         <div class="sub_content">
             <div class="face"><img src="img/Layer_40.png" alt="face"></div>
             <div class="face_text">
@@ -514,9 +513,9 @@
                     <button class="btn btn-outline-secondary" type="button" id="button-addon2">Subscribe</button>
                 </div>
             </div>
-
         </div>
-    </div>
+    </section>
+    
     <footer class="footer_index center">
         <div class="footer_l"><a class="logo" href=""><img class="logo_img" src="img/logo.png" alt="logo">BRAN<span class="red_d">D</span></a>
             <p class="footer_text">Objectively transition extensive data rather than cross functional solutions. Monotonectally syndicate multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array of processes and cross-unit partnerships.<br>Efficiently plagiarize 24/365 action items and focused infomediaries.Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
