lession 6 hometask done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Index</title>
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b65e355e01.js" crossorigin="anonymous"></script>
@@ -27,13 +27,14 @@
                         <li class="menu_list_browse"><a href="#" class="menu_link_browse">Leggings/Pants</a></li>
                         <li class="menu_list_browse"><a href="#" class="menu_link_browse">Skirts/Shorts</a></li>
                         <li class="menu_list_browse"><a href="#" class="menu_link_browse">Accessories</a></li>
-                    </ul></div>
+                    </ul>
+                    </div>
                 </details>
                 <input class="search_item" placeholder="Search for Item..." type="text">
                 <button class="btm_srch" type="submit"><img src="img/search.png" alt="search"></button>
             </form>
         </div>
-        <div class="header_right">
+        <div class="header_right" >
             <img class="header_cart" src="img/cart.svg" alt="cart">
             <a href="#" class="button">My Account</a>
         </div>
@@ -399,11 +400,11 @@
             </div>
         </div>
     </div>
-    <<div class="fetured_items_text center">
+    <div class="fetured_items_text center">
         <div class="Fetured_Items center">Fetured Items</div>
         <div class="subtext center">Shop for items based on what we featured in this week</div>
     <</div>
-    <<div class="second_items center">
+    <div class="second_items center">
         <div class="block">
             <a href="#"><img class="block_img" src="img/Layer_2.png" alt="t-shirt"></a>
             <div class="block_content">
@@ -515,7 +516,6 @@
             </div>
         </div>
     </section>
-    
     <footer class="footer_index center">
         <div class="footer_l"><a class="logo" href=""><img class="logo_img" src="img/logo.png" alt="logo">BRAN<span class="red_d">D</span></a>
             <p class="footer_text">Objectively transition extensive data rather than cross functional solutions. Monotonectally syndicate multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array of processes and cross-unit partnerships.<br>Efficiently plagiarize 24/365 action items and focused infomediaries.Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
