--- a/singlepage.html
+++ b/singlepage.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header center">
         <div class="header_left">
-            <a class="logo" href=""><img class="logo_img" src="img/logo.png" alt="logo">BRAN<span class="red_d">D</span></a>
+            <a class="logo" href="index.html"><img class="logo_img" src="img/logo.png" alt="logo">BRAN<span class="red_d">D</span></a>
             <form class="header_form" action="#">
                 <details class="browse_btn">
                     <summary class="browse">Browse</summary>
@@ -34,7 +34,7 @@
                 </ul>
                     </div>
                 </details>
-                <input class="search_item" placeholder="Search for Item..." type="text">
+                <input class="search_item" placeholder="  Search for Item..." type="text">
                 <button class="btm_srch" type="submit"><img src="img/search.png" alt="search"></button>
             </form>
         </div>
@@ -45,52 +45,7 @@
     </header>
     <nav class="nav_menu center">
         <ul class="menu">
-            <li class="menu_list"><a href="#" class="menu_link">Home</a>
-                <div class="drop">
-                    <div class="drop_flex">
-                        <h3 class="drop_h3">Women</h3>
-                        <ul class="drop_ul">
-                            <li><a href="#" class="drop_link">Dresses</a></li>
-                            <li><a href="#" class="drop_link">Tops</a></li>
-                            <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
-                            <li><a href="#" class="drop_link">Jackets/Coats</a></li>
-                            <li><a href="#" class="drop_link">Blazers</a></li>
-                            <li><a href="#" class="drop_link">Denim</a></li>
-                            <li><a href="#" class="drop_link">Leggings/Pants</a></li>
-                            <li><a href="#" class="drop_link">Scirts/Shorts</a></li>
-                            <li><a href="#" class="drop_link">Accessories</a></li>
-                        </ul>
-                    </div>
-                    <div class="drop_flex">
-                        <h3 class="drop_h3">Women</h3>
-                        <ul class="drop_ul">
-                            <li><a href="#" class="drop_link">Dresses</a></li>
-                            <li><a href="#" class="drop_link">Tops</a></li>
-                            <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
-                            <li><a href="#" class="drop_link">Jackets/Coats</a></li>
-                        </ul>
-                        <div class="drop_flex">
-                            <h3 class="drop_h3">Women</h3>
-                            <ul class="drop_ul">
-                                <li><a href="#" class="drop_link">Dresses</a></li>
-                                <li><a href="#" class="drop_link">Tops</a></li>
-                                <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="drop_flex">
-                        <h3 class="drop_h3">Women</h3>
-                        <ul class="drop_ul">
-                            <li><a href="#" class="drop_link">Dresses</a></li>
-                            <li><a href="#" class="drop_link">Tops</a></li>
-                            <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
-                            <li><a href="#" class="drop_link">Jackets/Coats</a></li>
-                        </ul>
-                        <img class="img_super_sale" src="img/Layer_42.jpg" alt="super sale">
-                        <h1 class="h1_drop">super<br>sale!</h1>
-                    </div>
-                </div>
-            </li>
+            <li class="menu_list"><a href="index.html" class="menu_link">Home</a></li>
             <li class="menu_list"><a href="#" class="menu_link">Man</a>
                 <div class="drop">
                     <div class="drop_flex">
@@ -115,14 +70,14 @@
                             <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
                             <li><a href="#" class="drop_link">Jackets/Coats</a></li>
                         </ul>
-                        <div class="drop_flex">
-                            <h3 class="drop_h3">Women</h3>
-                            <ul class="drop_ul">
-                                <li><a href="#" class="drop_link">Dresses</a></li>
-                                <li><a href="#" class="drop_link">Tops</a></li>
-                                <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
-                            </ul>
-                        </div>
+                    </div>
+                    <div class="drop_flex">
+                        <h3 class="drop_h3">Women</h3>
+                        <ul class="drop_ul">
+                            <li><a href="#" class="drop_link">Dresses</a></li>
+                            <li><a href="#" class="drop_link">Tops</a></li>
+                            <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
+                        </ul>
                     </div>
                     <div class="drop_flex">
                         <h3 class="drop_h3">Women</h3>
@@ -134,55 +89,54 @@
                         </ul>
                         <img class="img_super_sale" src="img/Layer_42.jpg" alt="super sale">
                         <h1 class="h1_drop">super<br>sale!</h1>
-
                     </div>
                 </div>
             </li>
             <li class="menu_list"><a href="#" class="menu_link">Women</a>
-                <div class="drop">
+            <div class="drop">
+                <div class="drop_flex">
+                    <h3 class="drop_h3">Women</h3>
+                    <ul class="drop_ul">
+                        <li><a href="#" class="drop_link">Dresses</a></li>
+                        <li><a href="#" class="drop_link">Tops</a></li>
+                        <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
+                        <li><a href="#" class="drop_link">Jackets/Coats</a></li>
+                        <li><a href="#" class="drop_link">Blazers</a></li>
+                        <li><a href="#" class="drop_link">Denim</a></li>
+                        <li><a href="#" class="drop_link">Leggings/Pants</a></li>
+                        <li><a href="#" class="drop_link">Scirts/Shorts</a></li>
+                        <li><a href="#" class="drop_link">Accessories</a></li>
+                    </ul>
+                </div>
+                <div class="drop_flex">
+                    <h3 class="drop_h3">Women</h3>
+                    <ul class="drop_ul">
+                        <li><a href="#" class="drop_link">Dresses</a></li>
+                        <li><a href="#" class="drop_link">Tops</a></li>
+                        <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
+                        <li><a href="#" class="drop_link">Jackets/Coats</a></li>
+                    </ul>
                     <div class="drop_flex">
                         <h3 class="drop_h3">Women</h3>
                         <ul class="drop_ul">
                             <li><a href="#" class="drop_link">Dresses</a></li>
                             <li><a href="#" class="drop_link">Tops</a></li>
                             <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
-                            <li><a href="#" class="drop_link">Jackets/Coats</a></li>
-                            <li><a href="#" class="drop_link">Blazers</a></li>
-                            <li><a href="#" class="drop_link">Denim</a></li>
-                            <li><a href="#" class="drop_link">Leggings/Pants</a></li>
-                            <li><a href="#" class="drop_link">Scirts/Shorts</a></li>
-                            <li><a href="#" class="drop_link">Accessories</a></li>
                         </ul>
-                    </div>
-                    <div class="drop_flex">
-                        <h3 class="drop_h3">Women</h3>
-                        <ul class="drop_ul">
-                            <li><a href="#" class="drop_link">Dresses</a></li>
-                            <li><a href="#" class="drop_link">Tops</a></li>
-                            <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
-                            <li><a href="#" class="drop_link">Jackets/Coats</a></li>
-                        </ul>
-                        <div class="drop_flex">
-                            <h3 class="drop_h3">Women</h3>
-                            <ul class="drop_ul">
-                                <li><a href="#" class="drop_link">Dresses</a></li>
-                                <li><a href="#" class="drop_link">Tops</a></li>
-                                <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="drop_flex">
-                        <h3 class="drop_h3">Women</h3>
-                        <ul class="drop_ul">
-                            <li><a href="#" class="drop_link">Dresses</a></li>
-                            <li><a href="#" class="drop_link">Tops</a></li>
-                            <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
-                            <li><a href="#" class="drop_link">Jackets/Coats</a></li>
-                        </ul>
-                        <img class="img_super_sale" src="img/Layer_42.jpg" alt="super sale">
-                        <h1 class="h1_drop">super<br>sale!</h1>
                     </div>
                 </div>
+                <div class="drop_flex">
+                    <h3 class="drop_h3">Women</h3>
+                    <ul class="drop_ul">
+                        <li><a href="#" class="drop_link">Dresses</a></li>
+                        <li><a href="#" class="drop_link">Tops</a></li>
+                        <li><a href="#" class="drop_link">Sweaters/Knits</a></li>
+                        <li><a href="#" class="drop_link">Jackets/Coats</a></li>
+                    </ul>
+                    <img class="img_super_sale" src="img/Layer_42.jpg" alt="super sale">
+                    <h1 class="h1_drop">super<br>sale!</h1>
+                </div>
+            </div>
             </li>
             <li class="menu_list"><a href="#" class="menu_link">Kids</a>
                 <div class="drop">
